# ros-courses-2018

./: .gitignore  README.md
src/: README.md
src/actionlib_demo/: CMakeLists.txt  package.xml
src/actionlib_demo/action/: Fibonacci.action
src/actionlib_demo/src/: fibonacci_action_server.cpp
src/actions/: CMakeLists.txt  package.xml
src/actions/src/averaging/: averaging_client.cpp  averaging_server.cpp
src/actions/src/factorial/: factorial_client.cpp  factorial_server.cpp
src/chat_package/: CMakeLists.txt  README.md  package.xml
src/chat_package/launch/: chat.launch  talker.launch  talker_frequency.test  talker_gtest.test
src/chat_package/src/: Listener.cpp  Talker.cpp
src/chat_package/test/: talker_test.cpp
src/container_finder/: CMakeLists.txt  hsv_thresholds  package.xml
src/container_finder/include/: ImageSubscriber.hpp  LaserSubscriber.hpp
src/container_finder/launch/: gazebo.launch
src/container_finder/src/: algorithm_node.cpp  container_finder.cpp  hsv_calibration.cpp  laser_node.cpp
src/custom_action/: CMakeLists.txt  package.xml
src/custom_action/action/: Averaging.action  Factorial.action
src/custom_action/src/averaging/: averaging_client.cpp  averaging_server.cpp
src/custom_action/src/factorial/: factorial_client.cpp  factorial_server.cpp
src/custom_message/: CMakeLists.txt  README.md  package.xml
src/custom_message/launch/: robot_status.launch
src/custom_message/msg/: RobotStatus.msg
src/custom_message/src/: RobotStatus.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/include/mapping/: Pgm.hpp  PgmOccupancyConverter.hpp
src/mapping/maps/: map.pgm  map.yaml
src/mapping/src/: Pgm.cpp  PgmOccupancyConverter.cpp  pgm_map_publisher.cpp
src/nav_turtlebot/: CMakeLists.txt  nav_params.yaml  navigation_velocity_smoother.yaml  notes.txt  package.xml
src/nav_turtlebot/launch/: default_nav_stack.launch
src/nav_turtlebot/launch/param/: custom_params.yaml
src/ninja_turtles/: CMakeLists.txt  README.md  package.xml
src/ninja_turtles/launch/: move_turtle.launch
src/ninja_turtles/src/: MoveTurtle.cpp
src/send_goals/: CMakeLists.txt  package.xml
src/send_goals/launch/: MakePlan.launch  SendGoals.launch
src/send_goals/src/: MakePlan.cpp  SendGoals.cpp
src/timer_package/: CMakeLists.txt  README.md  package.xml
src/timer_package/launch/: timer.launch  timer_frequency.test  timer_gtest.test  timer_node_frequency.test
src/timer_package/src/: timer_node.cpp
src/timer_package/test/: test_timer_package.cpp  timer_node_test.cpp
src/wander_bot/: CMakeLists.txt  README.md  package.xml
src/wander_bot/include/wander_bot/: ForwardRotateExplorer.hpp  Stopper.hpp
src/wander_bot/launch/: forward_rotate_explorer.launch  fwd_rot.launch  stopper.launch
src/wander_bot/src/: ForwardRotateExplorer.cpp  ForwardRotateNode.cpp  Stopper.cpp  StopperNode.cpp
src/wheeled_robot/: CMakeLists.txt  package.xml
src/wheeled_robot/launch/: display.launch  gazebo.launch
src/wheeled_robot/urdf/: common.xacro  kuka_lwr.urdf.xacro  wheeled_robot.urdf.xacro
src/wheeled_robot/wheelbot_control/: CMakeLists.txt  package.xml
src/wheeled_robot/wheelbot_control/config/: wheelbot_control.yaml
src/wheeled_robot/wheelbot_control/launch/: wheelbot_control.launch  wheelbot_control.rviz  wheelbot_control_rviz.launch  wheelbot_rqt.launch  wheelbot_rqt.perspective  wheelbot_rviz.launch
src/wheeled_robot/wheelbot_description/: CMakeLists.txt  package.xml
src/wheeled_robot/wheelbot_description/launch/: wheelbot_rviz.launch
src/wheeled_robot/wheelbot_description/rviz/: wheelbot.rviz
src/wheeled_robot/wheelbot_description/urdf/: kuka_lwr.xacro  macros.xacro  materials.xacro  wheelbot.gazebo  wheelbot.urdf.xacro
src/wheeled_robot/wheelbot_gazebo/: CMakeLists.txt  package.xml
src/wheeled_robot/wheelbot_gazebo/launch/: wheelbot_world.launch
src/wheeled_robot_urdf/: CMakeLists.txt  package.xml
src/wheeled_robot_urdf/launch/: display.launch  gazebo.launch
src/wheeled_robot_urdf/urdf/: kuka_lwr.urdf.xacro  wheeled_robot.urdf.xacro
