<?xml version="1.0"?>
<package format="2">

  <name>ninja_turtles</name>

  <version>0.1.0</version>
  
  <description>The teenage mutant ninja turtles package</description>

  <maintainer email="ramilsafnab1996@gmail.com">Ramil Safin</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/chupakabra1996/ros-courses-2018</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
