<?xml version="1.0"?>
<package format="2">
  
  <name>timer_package</name>
  
  <version>0.1.0</version>
  
  <description>The timer package</description>
  
  <maintainer email="ramilsafnab1996@gmail.com">Safin Ramil</maintainer>
  
  <license>MIT</license>

  <url type="repository">https://github.com/chupakabra1996/ros-courses-2018</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
