<?xml version="1.0"?>
<package format="2">
  <name>wheelbot_control</name>
  <version>0.0.1</version>
  <description>The wheelbot_control package</description>

  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
