<?xml version="1.0"?>
<package format="2">
  <name>wheelbot_gazebo</name>
  <version>0.0.1</version>
  <description>The wheelbot_gazebo package</description>

  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>wheelbot_control</exec_depend>
  <exec_depend>wheelbot_description</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
